fix line spacing

--- a/src/landingPage/ToolsSection.module.scss
+++ b/src/landingPage/ToolsSection.module.scss
@@ -21,7 +21,7 @@
       font-weight: 900;
       padding-top: 10vh;
       padding-bottom: 8vh;
-      line-height: 90%;
+      line-height: 100%;
       width: 100%;
   
       .gradient {
@@ -29,6 +29,7 @@
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         background-image: var(--std-gradient);
+        padding-bottom: 100%;
       }
     }
   
